# options-terminal

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
backend/: requirements.txt
backend/services/: smart_money.py
backtest/engine/: backtest_engine.py
core/bindings/: options_py.cpp
core/include/: gamma_squeeze.hpp  options_math.hpp
data/collectors/: opra_collector.py
docs/: index.html
docs/deployment/: GITHUB_SECRETS.md
docs/manual/: ANALYST_MANUAL.md
frontend/: package.json
frontend/src/components/charts/: GammaHeatmap.tsx  IVSurface3D.tsx
frontend/src/components/panels/: SmartMoneyPanel.tsx
